--- a/src/Components/Modal.css
+++ b/src/Components/Modal.css
@@ -33,3 +33,10 @@
 .display-none {
     display: none;
 }
+
+@media only screen 
+    and (min-width: 768px) {
+    .modal-main {
+        width: 80%;
+    }
+}
