Change font size to em instead of percent

--- a/src/Components/Note.css
+++ b/src/Components/Note.css
@@ -78,7 +78,7 @@
 .note--handwritten {
     /* font-family: Permanent Marker, Helvetica, sans-serif; */
     font-family: Kalam, cursive;
-    font-size: 240%;
+    font-size: 2em;
     font-weight: bold;
 }
 
